# UmbrellaMesh_release_v1

./: .gitmodules  CMakeLists.txt  LinearActuator.hh  README.md  UmbrellaDesignOptimizationTerms.hh  UmbrellaFourParametersOptimization.cc  UmbrellaFourParametersOptimization.hh  UmbrellaKnitroProblem.hh  UmbrellaMesh.cc  UmbrellaMesh.hh  UmbrellaMeshHessVec.inl  UmbrellaMeshIO.hh  UmbrellaMeshOutput.cc  UmbrellaMeshSegmentGradientAssembly.inl  UmbrellaMeshTerminalEdgeSensitivity.hh  UmbrellaOptimization.cc  UmbrellaOptimization.hh  UmbrellaRestHeightsOptimization.cc  UmbrellaRestHeightsOptimization.hh  UmbrellaSingleRestHeightOptimization.hh  UmbrellaTargetSurfaceFitter.cc  UmbrellaTargetSurfaceFitter.hh  design_parameter_solve.hh  environment.yml  umbrella_compute_equilibrium.hh
.github/workflows/: autotests.yml
python/: UmbrellaKnitroProblem.py  configuration.py  design_optimization_analysis.py  equilibrium_solve_analysis.py  force_analysis.py  force_vector_visualization_helper.py  knitro_options.opt  load_jsondata.py  open_umbrella.py  pipeline_helper.py  plate_rigidity_helper.py  stress_analysis.py  umbrella_finite_diff.py  umbrella_optimization_finite_diff.py  visualization_helper.py
python/FourParameters/: four_parameter_optimization_test.ipynb  optimize_four_parameters_lilium.ipynb
python/benchmark/: benchmark.ipynb  benchmark.py  umbrella_model_names.json
python/bistability_experiments/: bistability_analysis.ipynb  hemisphere_bistability_analysis.py  partial_actuation.ipynb
python_bindings/: CMakeLists.txt  umbrella_mesh.cc  umbrella_optimization.cc
(+92 files in other folders)
